k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: manhnguyenducvinhyen/k8s-music:latest
        imagePullPolicy: Never  # 🟢 quan trọng
        ports:
        - containerPort: 8081
