k8s/front-development.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: final-music-web-web:latest  # hoặc final-music-web-music-app:latest nếu đúng app
        ports:
        - containerPort: 80
